--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"/>
+    <img src="https://static.wikia.nocookie.net/agk/images/f/f1/UgandanKnuckles.png/revision/latest?cb=20180707171405" alt="Ugandan Knuckles"/>
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="Lion Yawning" title="Look at this lion yawning"/>
   </body>
 </html>
